--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
 /*Universal Styles*/
-
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
 
 body {
-  font-size: 11px;
+  font-size: 16px;
   font-family: 'Open Sans', sans-serif;
-  background-color: #ffffff;
+  background-image: url(images/dog-party-static.png);
+  background-size: cover;
+  background-repeat: no-repeat;  
 }
+
 
 /*Navigation*/
 
 header {
   width: 100%;
   background-color: #75e2e6;
-  height: 40px;
+  height: 4rem;
+  border: 4px solid Black;
 }
 
 img,
@@ -27,16 +35,14 @@ li{
   color: #000000;
 }
 
-hr {
-  color: #048eaa;
-  width: 100%;
-
-}
 
 
 
 /*Banner*/
 
+.banner {
+  background-image: url("images/park.jpg"); 
+}
 
 
 
