--- a/style.css
+++ b/style.css
@@ -1,50 +1,73 @@
 /*Universal Styles*/
-*,
-*:after,
-*:before {
-  box-sizing: border-box;
-}
 
 body {
-  font-size: 16px;
+  font-size: 20px;
   font-family: 'Open Sans', sans-serif;
   background-image: url(images/dog-party-static.png);
   background-size: cover;
   background-repeat: no-repeat;  
+  margin: auto;
 }
-
 
 /*Navigation*/
 
 header {
+  display: inline-block;
   width: 100%;
   background-color: #75e2e6;
-  height: 4rem;
-  border: 4px solid Black;
+  height: 4.5rem;
+  border-bottom: 2px solid #048eaa;
 }
 
 img,
 .logo {
-  height: 30px;
-  padding: 5px;
+  padding: 1rem;
+  height: 3rem;
 }
 
-li{
-  list-style-type: none;
+ul,
+li {
+  font-weight: 500;
   float: right;
+  display: inline-block;
+  list-style-type: none;
   color: #000000;
+  padding: 0 .5rem;
 }
-
-
 
 
 /*Banner*/
 
-.banner {
-  background-image: url("images/park.jpg"); 
+main {
+  text-align: center;
 }
 
+.banner {
+  background-image: url("images/park.jpg");
+  background-size: cover;
+  background-repeat: no-repeat; 
+  height: 500px;  
+}
 
+h1 {
+  color: white;
+}
+
+span {
+  font-weight: 800;
+}
+
+/*Content*/
+
+article {
+  display: inline-block;
+  width:  30%
+
+}
+
+p {
+  text-align: left;
+}
 
 
 /*Footer*/
