--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /*Universal Styles*/
 
+
+
 body {
   font-size: 20px;
   font-family: 'Open Sans', sans-serif;
@@ -16,10 +18,9 @@ header {
   width: 100%;
   background-color: #75e2e6;
   height: 4.5rem;
-  border-bottom: 2px solid #048eaa;
+  border-bottom: 3px solid #048eaa;
 }
 
-img,
 .logo {
   padding: 1rem;
   height: 3rem;
@@ -27,7 +28,7 @@ img,
 
 ul,
 li {
-  font-weight: 500;
+  font-weight: 600;
   float: right;
   display: inline-block;
   list-style-type: none;
@@ -42,19 +43,69 @@ main {
   text-align: center;
 }
 
-.banner {
-  background-image: url("images/park.jpg");
-  background-size: cover;
-  background-repeat: no-repeat; 
-  height: 500px;  
+section {
+
+
 }
+
+.banner {
+  background: linear-gradient(rgba(0,0,0,20%), rgba(0,0,0,0%)), url("images/park.jpg");
+  background-size: cover;  
+  background-blend-mode: darken;
+  background-repeat: no-repeat; 
+  background-position: bottom;
+  height: 30rem;
+  margin-top: -3rem;
+  padding-bottom: 2rem;
+}
+
 
 h1 {
   color: white;
+  font-weight: 400;
+  font-size: 2.3rem;
+  padding-top: 2rem;
 }
 
 span {
   font-weight: 800;
+}
+
+.dog {
+  height: 12rem;
+  border: 4px solid #048eaa;
+  border-radius: 50%;
+}
+
+.alpha {
+  border: 4px solid #75e2e6;
+
+}
+
+form {;
+  width: 40%;
+  margin: auto;
+}
+form,
+p {
+  color: white;
+  font-size: 1rem;
+  margin-bottom: -1rem;
+  padding-top: 1rem;
+}
+input,
+button {
+  display: block;
+  margin: 1rem auto;
+  box-sizing: border-box;
+  width: 100%;
+  height: 40px;
+}
+
+button {
+font-family: inherit;
+font-size: 1rem;
+background-color: #75e2e6;
 }
 
 /*Content*/
