--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
   font-size: 20px;
   font-family: 'Open Sans', sans-serif;
-  background-image: url(images/dog-party-static.png);
+  /*background-image: url(images/dog-party-static.png);*/
   background-size: cover;
   background-repeat: no-repeat;  
   margin: auto;
@@ -41,12 +41,9 @@ li {
 
 main {
   text-align: center;
-}
-
-section {
-
 
 }
+
 
 .banner {
   background: linear-gradient(rgba(0,0,0,20%), rgba(0,0,0,0%)), url("images/park.jpg");
@@ -55,8 +52,9 @@ section {
   background-repeat: no-repeat; 
   background-position: bottom;
   height: 30rem;
-  margin-top: -3rem;
+  margin-top: -2.6rem;
   padding-bottom: 2rem;
+  position: relative;
 }
 
 
@@ -75,11 +73,6 @@ span {
   height: 12rem;
   border: 4px solid #048eaa;
   border-radius: 50%;
-}
-
-.alpha {
-  border: 4px solid #75e2e6;
-
 }
 
 form {;
@@ -110,15 +103,45 @@ background-color: #75e2e6;
 
 /*Content*/
 
-article {
+.content {
   display: inline-block;
-  width:  30%
+  width:  100%;
+  float: right;
+}
 
+.clearfix:after {
+    content: ' ';
+    display: table;
+    clear: both;
+}
+
+.column {
+  width: 30%;
+}
+h3 {
+  font-size: 1.6rem;
+  font-weight: 800;
 }
 
 p {
   text-align: left;
+  color: #000000;
+}
+
+h4 {
+  color: White;
+  font-weight: 400;
+  background-color: #048eaa;
+  width: 90%;
+  height: 3rem;
+  padding-top: 1rem;
 }
 
 
+
+
 /*Footer*/
+
+footer {
+  background-color: #048eaa;
+}
