--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ li {
 
 main {
   text-align: center;
-
 }
 
 
@@ -86,6 +85,11 @@ p {
   margin-bottom: -1rem;
   padding-top: 1rem;
 }
+
+.name { 
+  text-align: left;
+}
+
 input,
 button {
   display: block;
@@ -123,9 +127,14 @@ h3 {
   font-weight: 800;
 }
 
-p {
+#facts {
+  margin-right: 2rem;
+}
+
+.woofs {
   text-align: left;
   color: #000000;
+  height: 15rem;
 }
 
 h4 {
@@ -136,7 +145,6 @@ h4 {
   height: 3rem;
   padding-top: 1rem;
 }
-
 
 
 
