--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 /*Universal Styles*/
 
-
-
 body {
   font-size: 20px;
   font-family: 'Open Sans', sans-serif;
@@ -36,13 +34,11 @@ li {
   padding: 0 .5rem;
 }
 
-
 /*Banner*/
 
 main {
   text-align: center;
 }
-
 
 .banner {
   background: linear-gradient(rgba(0,0,0,20%), rgba(0,0,0,0%)), url("images/park.jpg");
@@ -55,7 +51,6 @@ main {
   padding-bottom: 2rem;
   position: relative;
 }
-
 
 h1 {
   color: white;
@@ -78,6 +73,7 @@ form {;
   width: 40%;
   margin: auto;
 }
+
 form,
 p {
   color: white;
@@ -133,6 +129,7 @@ h3 {
 
 .woofs {
   text-align: left;
+  font-weight: normal;
   color: #000000;
   height: 15rem;
   width: 90%;
